--- a/npcs/anastasia_dumas.yaml
+++ b/npcs/anastasia_dumas.yaml
@@ -464,9 +464,8 @@ npc:
     - Mason's Tools
     - Woodcrafter's Tools
   special-abilities: 
-  - title: 
-    - Sorcerer Spellcasting
-    - abilities: 
+  - title: Sorcerer Spellcasting
+  - abilities: 
       - sorcery Points: 20, 
         spell DC: 20
         cantrips: Fire Bolt, Mage Hand, Shocking Grasp, Minor Illusion, Message, Chill Touch
@@ -479,10 +478,9 @@ npc:
         7th Level: Finger of Death, Fire Storm, Plane Shift
         8th Level: Incendiary Cloud, Earthquake, Power Word Stun
         9th Level: Gate, Power Word Kill, Time Stop
-  - title: 
-    - MetaMagic
+  - title: MetaMagic
   - decription: You gain two of the following Metamagic Options of your choice. You gain another one at 10th and 17th level.
-    abilities:
+  - abilities:
     - empowered Spell: When you roll damage for a spell, you can spend 1 sorcery point to reroll a number of the damage dice up to your Charisma modifier (minimum of one). You must use the new rolls. You can use Empowered 
                       Spell even if you have already used a different Metamagic option during the casting of the spell.
       heightened Spell: When you Cast a Spell that forces a creature to make a saving throw to resist its Effects, you can spend 3 sorcery points to give one target of the spell disadvantage on its first saving throw made 
@@ -490,55 +488,42 @@ npc:
       subtle Spell: When you Cast a Spell, you can spend 1 sorcery point to cast it without any somatic or verbal Components
       etwinned Spell: When you Cast a Spell that Targets only one creature and doesn’t have a range of self, you can spend a number of sorcery points equal to the spell’s level to target a second creature in range with the 
                       same spell (1 sorcery point if the spell is a cantrip)
-  - title: 
-    - Sorcerous Restoration
+  - title: Sorcerous Restoration
   - description: you regain 4 expended sorcery points whenever you finish a Short Rest
-  - title: 
-    - shadow Magic Abilities
+  - title: Shadow Magic Abilities
   - description:
     - eyes of the dark: you have darkvision with a range of 120 feet. When you reach 3rd level in this class, you learn the Darkness spell, which doesn't count against your number of sorcerer spells known. In addition, you 
                         can cast it by spending 2 sorcery points or by expending a spell slot. If you cast it with sorcery points, you can see through the darkness created by the spell.
       strength of the grave: When damage reduces you to 0 hit points, you can make a Charisma saving throw (DC 5 + the damage taken). On a success, you instead drop to 1 hit point. You can't use this feature if you are 
                              reduced to 0 hit points by radiant damage or by a critical hit. After the saving throw succeeds, you can't use this feature again until you finish a long rest.
-    additional-information:
-    - title:
-      - hound of ill omen
-      description: 
-      - you gain the ability to call forth a howling creature of darkness to harass your foes. As a bonus action, you can spend 3 sorcery points to summon a hound of ill omen to target one creature you can see within 120 feet of you. The hound uses the dire wolf’s statistics, with the following changes
       additional-information:
-      - The hound is size Medium, not Large, and it counts as a monstrosity, not a beast.
-      - It appears with a number of temporary hit points equal to half your sorcerer level.
-      - It can move through other creatures and objects as if they were difficult terrain. The hound takes 5 force damage if it ends its turn inside an object.
-      - At the start of its turn, the hound automatically knows its target’s location. If the target was hidden, it is no longer hidden from the hound.
-      - The hound appears in an unoccupied space of your choice within 30 feet of the target. Roll initiative for the hound. On its turn, it can move only toward its target by the most direct route, and it 
-        can use its action only to attack its target. The hound can make opportunity attacks, but only against its target. Additionally, while the hound is within 5 feet of the target, the target has 
-        disadvantage on saving throws against any spell you cast. The hound disappears if it is reduced to 0 hit points, if its target is reduced to 0 hit points, or after 5 minutes.
-  - title:
-    - shadow walk
-  - description:
-    - you gain the ability to step from one shadow into another. When you are in dim light or darkness, as a bonus action, you can teleport up to 120 feet to an unoccupied space you can see that is also in dim 
-      light or darkness.
-  - title:
-    - umbral form
-  - description: 
-     - you can spend 6 sorcery points as a bonus action to transform yourself into a shadowy form. In this form, you have resistance to all damage except force and radiant damage, and you can move through other 
-       creatures and objects as if they were difficult terrain. You take 5 force damage if you end your turn inside an object. You remain in this form for 1 minute. It ends early if you are incapacitated, if you 
-       die, or if you dismiss it as a bonus action.
-  - title:
-    - shadow sorcerer quirks 
-  - description:
-    - When you are asleep, you don't appear to breathe (though you must still breathe to survive).
-  - title:
-    - legendary resistance
+  - title: Hound of ill omen
+  - description: You gain the ability to call forth a howling creature of darkness to harass your foes. As a bonus action, you can spend 3 sorcery points to summon a hound of ill omen to target one creature you can see within 120 feet of you. The hound uses the dire wolf’s statistics, with the following changes
+  - additional-information:
+    - The hound is size Medium, not Large, and it counts as a monstrosity, not a beast.
+    - It appears with a number of temporary hit points equal to half your sorcerer level.
+    - It can move through other creatures and objects as if they were difficult terrain. The hound takes 5 force damage if it ends its turn inside an object.
+    - At the start of its turn, the hound automatically knows its target’s location. If the target was hidden, it is no longer hidden from the hound.
+    - The hound appears in an unoccupied space of your choice within 30 feet of the target. Roll initiative for the hound. On its turn, it can move only toward its target by the most direct route, and it 
+      can use its action only to attack its target. The hound can make opportunity attacks, but only against its target. Additionally, while the hound is within 5 feet of the target, the target has 
+      disadvantage on saving throws against any spell you cast. The hound disappears if it is reduced to 0 hit points, if its target is reduced to 0 hit points, or after 5 minutes.
+  - title: Shadow walk
+  - description: You gain the ability to step from one shadow into another. When you are in dim light or darkness, as a bonus action, you can teleport up to 120 feet to an unoccupied space you can see that is also in dim 
+                 light or darkness.
+  - title: Umbral form
+  - description: You can spend 6 sorcery points as a bonus action to transform yourself into a shadowy form. In this form, you have resistance to all damage except force and radiant damage, and you can move through other 
+                 creatures and objects as if they were difficult terrain. You take 5 force damage if you end your turn inside an object. You remain in this form for 1 minute. It ends early if you are incapacitated, if you 
+                 die, or if you dismiss it as a bonus action.
+  - title: Shadow sorcerer quirks 
+  - description: When you are asleep, you don't appear to breathe (though you must still breathe to survive).
+  - title: Legendary resistance
   - description: (3/Day), If Anastasia Dumas fails a saving throw she can choose to succeed instead 
-  - title: 
-    - legendary Actions
-  - description: 
-    - Anastasia Dumas can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. Anastasia Dumas regains spent Legendary Actions at the start of her turn.
-  -  additional-information:
-     - devils Portal: Anastasia can cast Gate, opening a portal and send one person who fails a DC 15 Dexterity directly to the realm of her master for 1 minute
-       cantrips: Anastasia Dumas casts a cantrip
-       family reserve: Anastasia Dumas can cast Gate, opening up to 5 portals to summon other members of the Dumas Family to join the fight   
+  - title: Legendary Actions
+  - description: Anastasia Dumas can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. Anastasia Dumas regains spent Legendary Actions at the start of her turn.
+  - additional-information:
+    - devils Portal: Anastasia can cast Gate, opening a portal and send one person who fails a DC 15 Dexterity directly to the realm of her master for 1 minute
+      cantrips: Anastasia Dumas casts a cantrip
+      family reserve: Anastasia Dumas can cast Gate, opening up to 5 portals to summon other members of the Dumas Family to join the fight   
   
   attacks: |
     Spellcasting
