--- a/npcs/abrinet_of_dire_dawa_riley.yaml
+++ b/npcs/abrinet_of_dire_dawa_riley.yaml
@@ -493,9 +493,12 @@ npc:
   special-abilities:
   - title: Drow Traits
   - abilities:
-    - Superior Darkvision: See 120' like bright light in dim light and like dim light in darkness
-      Keen Senses: Proficiency in Perception
-      Fey Ancestry: Advantage on saving throws against charm and immune to sleep magic
+    - title: Superior Darkvision
+    - content: See 120' like bright light in dim light and like dim light in darkness
+    - title: Keen Senses
+    - content: Proficiency in Perception
+    - title: Fey Ancestry
+    - content: Advantage on saving throws against charm and immune to sleep magic
     - title: Trance
     - content: Deasn't need to sleep, 4 hours meditation counts as a long rest
     - title: Sunlight Sensitivity
